samples/_failures_safe/1760888533_0d8e01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9c4f39d.c: In function ‘main’:
./samples/SAFE/__tmp_b9c4f39d.c:166:5: error: ‘cleanup’ undeclared (first use in this function)
  166 |     cleanup
      |     ^~~~~~~
./samples/SAFE/__tmp_b9c4f39d.c:166:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b9c4f39d.c:166:12: error: expected ‘;’ at end of input
  166 |     cleanup
      |            ^
      |            ;
./samples/SAFE/__tmp_b9c4f39d.c:166:5: error: expected declaration or statement at end of input
  166 |     cleanup
      |     ^~~~~~~
